Update authors in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ version = "0.0.0"
 description = "Shared research infrastructure for deterministic experimentation"
 readme = "README.md"
 requires-python = ">=3.11"
-authors = [{ name = "research-utils contributors" }]
+authors = [ 
+{name = "Ryaan Lari", email = "lari2@illinois.edu"}
+]
 dependencies = []
 
 [project.optional-dependencies]
