--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "Shared research infrastructure for deterministic experimentation"
 readme = "README.md"
 requires-python = ">=3.11"
 authors = [
-  {name = "Ryaan Lari", email = "lari2@illinois.edu"}
+  {name = "Ryaan Lari"}
 ]
 dependencies = []
 
