--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "research-utils"
 version = "0.0.0"
 description = "Shared research infrastructure for deterministic experimentation"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 authors = [
   {name = "Ryaan Lari", email = "lari2@illinois.edu"}
 ]
@@ -25,13 +25,15 @@ agent = [
   "pydantic>=2.7",
 ]
 all = [
-  "research-utils[harness,ml,agent]",
+  "matplotlib>=3.8",
+  "numpy>=1.26",
+  "pydantic>=2.7",
 ]
 dev = [
   "pre-commit",
   "pytest",
   "mypy",
-] 
+]
 
 [tool.setuptools]
 package-dir = {"" = "src"}
