--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,12 @@ warn_unused_ignores = true
 mypy_path = "src"
 packages = ["research_utils"]
 
+
+
+[[tool.mypy.overrides]]
+module = ["pytest", "_pytest.*"]
+ignore_missing_imports = true
+
 [tool.pytest.ini_options]
 addopts = "-q"
 testpaths = ["tests"]
